# g3data

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.INSTALL  README.SOURCE  README.TEST  config.h.in  configure  configure.ac  drawing.c  g3data.c  g3data.sgml  g3data.spec  main.c  main.h  points.c  sort.c  strings.h  test1.out  test1.values  test2.out  test2.values  tooltips.h  vardefs.h
data/: Makefile.am  Makefile.in  g3data.desktop
doc/: Makefile.am  Makefile.in  g3data.1
g3data/: drawing.c  drawing.h  g3data-about.c  g3data-about.h  g3data-application.c  g3data-application.h  g3data-image.c  g3data-image.h  g3data-window.c  g3data-window.h  main.c  main.h  points.c  points.h  sort.c  sort.h  strings.h  vardefs.h
